# cmd/sync/docs/swagger.json
@@ -55,7 +55,8 @@
             "type": "object",
             "required": [
                 "email",
-                "name"
+                "name",
+                "password"
             ],
             "properties": {
                 "dateCreated": {
@@ -68,6 +69,9 @@
                     "type": "string"
                 },
                 "name": {
+                    "type": "string"
+                },
+                "password": {
                     "type": "string"
                 }
             }
